helm/yaml/tls-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: letsencrypt
---
apiVersion: v1
kind: Namespace
metadata:
  name: renlm
