helm/yaml/install.istio.yaml
# https://istio.io/latest/zh/docs/tasks/traffic-management/ingress/kubernetes-ingress/
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    name: istio
    annotations:
      ingressclass.kubernetes.io/is-default-class: "true"
  spec:
    controller: istio.io/ingress-controller
# https://cert-manager.io/docs/configuration/acme/http01/
- apiVersion: cert-manager.io/v1
  kind: ClusterIssuer
  metadata:
    name: letsencrypt-issuer
  spec:
    acme:
      # The ACME server URL
      server: https://acme-v02.api.letsencrypt.org/directory
      # Email address used for ACME registration
      email: renlm@21cn.com
      # Name of a secret used to store the ACME account private key
      privateKeySecretRef:
        name: letsencrypt-issuer
      solvers:
      # An empty 'selector' means that this solver matches all domains
      - selector: {}
        # Enable the HTTP-01 challenge provider
        http01:
          ingress:
            # istio | nginx | traefik
            class: istio
# https://cert-manager.io/docs/usage/certificate/
- apiVersion: cert-manager.io/v1
  kind: Certificate
  metadata:
    name: istio-gateway
    namespace: istio-ingress
  spec:
    secretName: tls-istio-gateway
    duration: 2160h
    renewBefore: 360h
    subject:
      organizations:
      - renlm.cn
    dnsNames:
    - renlm.cn
    - www.renlm.cn
    - rancher.renlm.cn
    - jenkins.renlm.cn
    - redis.renlm.cn
    - mysql.renlm.cn
    - rabbitmq.renlm.cn
    - mygraph.renlm.cn
    issuerRef:
      name: letsencrypt-issuer
      kind: ClusterIssuer
# https://istio.io/latest/zh/docs/reference/config/networking/gateway/
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    name: gateway
    namespace: istio-ingress
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
      - renlm.cn
      - www.renlm.cn
      - rancher.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
      - renlm.cn
      - www.renlm.cn
      - rancher.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
      tls:
        mode: SIMPLE
        credentialName: tls-istio-gateway
        minProtocolVersion: TLSV1_2
    - port:
        number: 31379
        protocol: TCP
        name: redis
      hosts:
      - redis.renlm.cn
    - port:
        number: 31306
        protocol: TCP
        name: mysql
      hosts:
      - mysql.renlm.cn
    - port:
        number: 31672
        protocol: TCP
        name: amqp
      hosts:
      - rabbitmq.renlm.cn
# https://istio.io/latest/zh/docs/reference/config/networking/virtual-service/
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    name: rancher
    namespace: istio-ingress
  spec:
    hosts:
    - rancher.renlm.cn
    gateways:
    - gateway
    http:
    - match:
      - port: 80
      - port: 443
      route:
      - destination:
          host: rancher.cattle-system.svc.cluster.local
          port:
            number: 80
